# HiVA

./: README.md  create_skeleton.sh  pyproject.toml
hiva/: __init__.py  create_config.py  create_unit_tests.py  seed_oxigraph.py
hiva/agents/: backward_msgs.py  base.py  forward_msgs.py  semantics.py
hiva/configs/: defaults.yaml
hiva/envs/: agentic.py  base.py  math.py  programmatic.py  qa.py
hiva/eval/: datasets.py  metrics.py
hiva/evolution/: constraints.py  semantic.py  topology.py
hiva/gradients/: credit_assign.py  parser.py  textgrad_adapter.py
hiva/graph/: exec_subgraph.py  memory.py  model.py
hiva/knowledge/: kg_client.py  matching.py
hiva/knowledge/ontology/: capabilities.ttl  tasks.ttl
hiva/orchestrator/: loop.py  state.py
hiva/routing/: distance.py  kabb.py  synergy.py
hiva/tests/: conftest.py  test_agents_base.py  test_constraints.py  test_credit_assign.py  test_envs.py  test_eval_and_metrics.py  test_evolution.py  test_exec_subgraph.py  test_gradients_parser.py  test_graph_model.py  test_knowledge_matching.py  test_orchestrator_loop.py  test_routing_distance.py  test_routing_kabb.py  test_semantics.py  test_state.py  test_tools.py  test_ui_inspect.py
hiva/tools/: evolution.py  registry.py  runtime.py
hiva/ui/: inspect.py
